res_pjsip: disable multi domain to improve realtime performace
This patch added new global pjsip option 'disable_multi_domain'.
Disabling Multi Domain can improve Realtime performance by reducing
number of database requests.

ASTERISK-25930

Change-Id: I2e7160f3aae68475d52742107949a799aa2c7dc7

--- a/CHANGES
+++ b/CHANGES
@@ -279,6 +279,12 @@ res_parking:
    for these variables.  The indefinite inheritance is also recommended
    for the PARKINGEXTEN variable.
 
+res_pjsip
+------------------
+ * Added new global option (disable_multi_domain) to pjsip.
+   Disabling Multi Domain can improve realtime performace by reducing
+   number of database requsts.
+
 chan_pjsip
 ------------------
  * Added 'pjsip show channelstats' CLI command.
