app_confbridge: Add a regcontext option for confbridge bridge profiles.
This patch allows for having app_confbridge register the name of the
conference as an extension into a specific context, similar to
regcontext for chan_sip.  This variant is not quite as involved as the
one in chan_sip and doesn't allow for multiple contexts or custom
extensions, you can only specify the context and the conference name
will always be used as the extension to register.

Change-Id: Icacf94d9f2b5dfd31ef36f6cb702392619a7902f

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,18 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes since Asterisk 11.22 -------------------------------
+------------------------------------------------------------------------------
+
+app_confbridge
+-------------------
+ * Added a bridge profile option called regcontext that allows you to
+   dynamically register the conference bridge name as an extension into
+   the specified context.  This allows tracking down conferences on multi-
+   server installations via alternate means (DUNDI for example). By default
+   this feature is not used.
+
+------------------------------------------------------------------------------
 --- Functionality changes since Asterisk 11.21 -------------------------------
 ------------------------------------------------------------------------------
 
