--- a/CHANGES
+++ b/CHANGES
@@ -259,6 +259,10 @@ res_pjsip_outbound_registration
   outbound registration, registration is retried at the given interval up to
   'max_retries'.
 
+res_pjsip_outbound_publish
+------------------
+ * Added a new multi_user option that when set to 'yes' allows a given configuration
+   to be used for multiple users.
 
 CEL Backends
 ------------------
